Limit optimized LayoutBlockFlowLine width computation to 8bit

Limit the use of the optimized LayoutBlockFlowLine width implementation
to 8-bit text as it isn't guaranteed to work correctly for 16-bit text.

BUG=692014
R=kojii@chromium.org

Review-Url: https://codereview.chromium.org/2706033009
Cr-Commit-Position: refs/heads/master@{#456271}

Former-commit-id: 8683b364d376b33bed4cbfe6b46d2c39411b05cd